--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -173,7 +173,7 @@ header{
     text-align: center;
     img{
         margin: auto;
-        width: 10%;
+        width: 50px;
     }
     p{
         color: $MainColor;
@@ -235,6 +235,9 @@ header{
     }
     .footer .redes p{
         font-size: 1.5rem;
+    }
+    .footer img{
+        width: 100px;
     }
         .contenedor {
             margin: auto;
